# SuperShaderPrototype

./: CMakeLists.txt  README.md
include/supershader/: pipeline_function.h  pipeline_step.h  shader_factory.h  shader_parser.h  utils.h
test/: CMakeLists.txt  main.cpp
test/shader/: vert_library_function.vs  vert_pipeline_function_init_global_struct.vs  vert_pipeline_function_vert_out.vs  vert_pipeline_function_vert_process.vs
